# ReasonOps-ITSM

./: .gitignore  .gitmodules  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICK_REFERENCE.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: sdk-ci.yml  webapp-ci.yml
api/: main.py
docs/: CLI_DEMONSTRATION_GUIDE.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_SUMMARY.md  ITIL.md  MATIS_INTEGRATION.md  OPTIMIZATION_STATUS.md  QUICKSTART.md  RACI_INTEGRATION.md  RELEASE_NOTES.md  SCENARIOS.md  SECURITY.md  VERSION.md  WEBAPP_OPTIMIZATION.md  WEBAPP_OPTIMIZATION_SUMMARY.md  ai-agents-architecture.md  input.md
examples/scenarios/: README.md  scenario1_production_outage.py  scenario2_database_performance.py
framework/: README.md
framework/continual-improvement/: README.md
framework/governance/: README.md
framework/implementation/: README.md
framework/metrics/: README.md
integration/: module_integration_summary.md
python-framework/: CLI_ENHANCEMENT_SUMMARY.md  CLI_REFERENCE.md  README.md  __init__.py  ai_agents_demo_report_20251022_024710.json  ai_generated_maintenance_playbook.yml  cli.py  debug_cli_incident.py  debug_incident.py  demo_cli_complete.py  itil_aiops_report_20251022_022835.json  local_check.yml  reasonops.py  simple_test.py  test_cli.py  test_framework.py  test_ollama_cli.py
reasonops_sdk/: __init__.py  client.py
tests/: test_agents.py  test_sdk.py
webapp/: PERFORMANCE.md  VALIDATION.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vitest.config.ts
(+85 files in other folders)
